# rust-dev-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main.rs.d  main.rs.xxx
test/perf/: call.js
test/preact/: no-cheating.html  package.json
test/preact/src/: main.tsx
test/rxjs/: tsconfig.json
test/rxjs/src/: main.ts
test/simple/: index.html
